# colink-protocol-storage-macro-fallback

./: Cargo.toml  README.md  colink.toml
.github/workflows/: build.yml
src/: main.rs
