[package]
name = "colink-protocol-storage-macro-fallback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colink = { version="0.3.9", features=["storage_macro"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = "1.28.2"
tracing = "0.1.37"
